added new start equipments config